--- a/styles/settings/_spacings.scss
+++ b/styles/settings/_spacings.scss
@@ -4,6 +4,7 @@ $spacing-100: 4px;
 $spacing-200: 8px;
 $spacing-300: 12px;
 $spacing-400: 16px;
+$spacing-450: 20px;
 $spacing-500: 24px;
 $spacing-600: 32px;
 $spacing-700: 48px;
