--- a/blocks/form/components/languagepanel/languagepanel.css
+++ b/blocks/form/components/languagepanel/languagepanel.css
@@ -1,3 +1,3 @@
-main.wizard--bg-dark .p-large{font-size:clamp(0.9375rem, 1.25vw, 1.0625rem)}main.wizard--bg-dark .subtitle{font-size:clamp(1.5rem, 4vw, 2rem);font-style:normal}main .form form .panel-repeatable-panel__languagepanel [name=proficiency]{display:none}
+main .form form .panel-repeatable-panel__languagepanel [name=proficiency]{display:none}
 
 /*# sourceMappingURL=languagepanel.css.map */
