--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -111,7 +111,7 @@
 }
 
 /******************************
-  Mixins
+  Error State
 *******************************/
 
 /* Input Error State */
@@ -122,5 +122,21 @@
 
   &::placeholder {
     color: $color-feedback-red;
+  }
+}
+
+/******************************
+  Wizard Hero Welcome
+*******************************/
+
+@mixin responsive-padding-bottom($mobile, $tablet, $desktop) {
+  padding-bottom: $mobile;
+
+  @include media('tablet') {
+    padding-bottom: $tablet;
+  }
+
+  @include media('desktop') {
+    padding-bottom: $desktop;
   }
 }
