feat(form) drivers licence

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -1,119 +1,147 @@
 @use '../../../../styles/settings' as *;
 
 .radio-group--with-icon {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 0 16px;
-  padding-bottom: $spacing-600;
-
-  .radio-wrapper {
-    flex: 1 1 45%; // Ensures equal width tiles, and stays side by side on mobile RW
     display: flex;
-  }
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 0 16px;
+    padding-bottom: $spacing-600;
 
-  .radio-group--with-icon__label {
-    width: 100%;
-    padding: $spacing-400;
-    border-radius: $spacing-200;
-    border: $stroke-input-stroke solid $stroke-tertiary;
-    background: $bg-light-primary;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    min-height: 140px;
-    gap: 20px 0;
-    transition: all 0.2s ease;
-
-    &::before {
-      order: 1;
-      margin-right: 0;
+    .radio-wrapper {
+        flex: 1 1 45%; // Ensures equal width tiles, and stays side by side on mobile RW
+        display: flex;
     }
 
-    > span:not(.radio-group--with-icon__icon) {
-      height: 4.5rem;
-      line-height: 1.5;
-      display: -webkit-box;
-      -webkit-line-clamp: 3;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-align: center;
-      align-items: center;
-      justify-content: center;
-    }
-  }
+    .radio-group--with-icon__label {
+        width: 100%;
+        padding: $spacing-400;
+        border-radius: $spacing-200;
+        border: $stroke-input-stroke solid $stroke-tertiary;
+        background: $bg-light-primary;
 
-  .radio-group--with-icon__icon {
-    width: 40px;
-    height: 40px;
-    display: block;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        min-height: 140px;
+        gap: 20px 0;
+        transition: all 0.2s ease;
 
-  .radio-group--with-icon--list-search-1 {
-    content: url('../../../../icons/icon-streamline.svg');
-  }
-
-  .radio-group--with-icon--smiley-face {
-    content: url('../../../../icons/smiley-face.svg');
-  }
-
-  input[type='radio'] {
-    &:checked {
-      + .radio-group--with-icon__label {
-        background-color: $color-shade-blue-10;
-        border: 2px solid $color-primary;
-        color: $text-dark-primary;
-
-        &:after {
-          left: auto;
-          top: auto;
-          bottom: $spacing-400 + 1px;
-          margin: 0 auto;
+        &::before {
+            order: 1;
+            margin-right: 0;
         }
-      }
+
+        >span:not(.radio-group--with-icon__icon) {
+            height: 4.5rem;
+            line-height: 1.5;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
     }
-  }
+
+    .radio-group--with-icon__icon {
+        width: 40px;
+        height: 40px;
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .radio-group--with-icon--car-off {
+        content: url('../../../../icons/icon-car-off.svg');
+    }
+
+    .radio-group--with-icon--car-on {
+        content: url('../../../../icons/icon-car-on.svg');
+    }
+    
+    .radio-group--with-icon--full-time {
+        content: url('../../../../icons/icon-full-time.svg');
+    }
+
+    .radio-group--with-icon--part-time {
+        content: url('../../../../icons/icon-part-time.svg');
+    }
+
+    .radio-group--with-icon--list-search-1 {
+        content: url('../../../../icons/icon-streamline.svg');
+    }
+
+    .radio-group--with-icon--smiley-face {
+        content: url('../../../../icons/smiley-face.svg');
+    }
+
+    input[type='radio'] {
+        &:checked {
+            +.radio-group--with-icon__label {
+                background-color: $color-shade-blue-10;
+                border: 2px solid $color-primary;
+                color: $text-dark-primary;
+
+                &:after {
+                    left: auto;
+                    top: auto;
+                    bottom: $spacing-400 + 1px;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
 }
 
 .radio-group-wrapper {
-  &.horizontal {
-    display: flex;
-    flex-direction: column;
+    &.horizontal {
+        display: flex;
+        flex-direction: column;
 
-    label {
-      padding: 16px;
-      border-radius: $border-radius-mid;
-      border: 2px solid $color-shade-navy-45;
-      width: 100%;
-      margin: 0;
-      margin-bottom: 8px;
-      justify-content: space-between;
-      transition: all 0.2s ease;
+        label {
+            padding: 16px;
+            border-radius: $border-radius-mid;
+            border: 2px solid $color-shade-navy-45;
+            width: 100%;
+            margin: 0;
+            margin-bottom: 8px;
+            justify-content: space-between;
+            transition: all 0.2s ease;
 
-      &::before {
-        order: 1;
-        margin-right: 0;
-      }
-    }
-
-    input {
-      &:checked {
-        + label {
-          border: 2px solid $stroke-accent;
-          background-color: $color-white;
-          color: $text-dark-primary;
-
-          &::after {
-            right: 17px;
-            top: 17px;
-            left: auto;
-          }
+            &::before {
+                order: 1;
+                margin-right: 0;
+            }
         }
-      }
+
+        input {
+            &:checked {
+                +label {
+                    border: 2px solid $stroke-accent;
+                    background-color: $color-white;
+                    color: $text-dark-primary;
+
+                    &::after {
+                        right: 17px;
+                        top: 17px;
+                        left: auto;
+                    }
+                }
+            }
+        }
     }
-  }
+
+    &.radio-group--bar {
+        .radios-wrapper {
+            display: flex;
+            flex-direction: row;
+
+            .radio-wrapper {
+                flex: 1;
+            }
+
+        }
+    }
 }
