feat(form) bugfix

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -131,7 +131,7 @@ main .form form fieldset.cards > .checkbox-wrapper > label > img {
   object-fit: contain;
 }
 
-main .form form .field-label--with-description{
+main .form form .field-label--with-description:not(.radio-group--with-icon__label){
     flex-direction: column;
     align-items: start;
 }
