--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -7,9 +7,9 @@
 .wizard--bg-dark {
   .wizard {
     background: linear-gradient(
-      135deg,
-      $color-accent 25%,
-      $color-primary-navy 100%
+                    135deg,
+                    $color-accent 25%,
+                    $color-primary-navy 100%
     );
   }
 }
@@ -17,18 +17,21 @@
 .wizard--bg-light {
   .wizard {
     background: linear-gradient(
-      135deg,
-      $color-shade-blue-10 25%,
-      $color-shade-blue-25 100%
+                    135deg,
+                    $color-shade-blue-10 25%,
+                    $color-shade-blue-25 100%
     );
   }
 }
 
 .wizard {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(
-    135deg,
-    $color-accent 25%,
-    $color-primary-navy 100%
+                  135deg,
+                  $color-accent 25%,
+                  $color-primary-navy 100%
   );
 
   .current-wizard-step {
@@ -42,8 +45,6 @@
   // First screen JSP
   .current-wizard-step:is([data-index='0'], [data-index='1']) {
     padding-top: $spacing-600;
-    // Extra space at the bottom
-    // Because of fix nav
     padding-bottom: 120px;
 
     @include media('tablet') {
@@ -58,8 +59,6 @@
     }
   }
 
-  // Exclude current component being styled for Bootstrap
-  // data-index="0" = first screen
   .current-wizard-step:not([data-index='0'], [data-index='1']) {
     @include media('desktop') {
       padding: $spacing-600 0;
@@ -122,7 +121,6 @@
   }
 }
 
-// Utility/hiding logic
 main .form form .wizard > fieldset > legend {
   display: none;
 }
@@ -136,16 +134,16 @@ main .form form .wizard .wizard-button-wrapper .field-wrapper {
 }
 
 main
-  form
-  .wizard
-  > .current-wizard-step.panel-wrapper:first-of-type
-  ~ .wizard-button-wrapper
-  > .wizard-button-prev,
+form
+.wizard
+> .current-wizard-step.panel-wrapper:first-of-type
+~ .wizard-button-wrapper
+> .wizard-button-prev,
 main
-  form
-  .wizard
-  > .current-wizard-step.panel-wrapper:last-of-type
-  ~ .wizard-button-wrapper
-  > .wizard-button-next {
+form
+.wizard
+> .current-wizard-step.panel-wrapper:last-of-type
+~ .wizard-button-wrapper
+> .wizard-button-next {
   display: none;
 }
