--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -24,7 +24,8 @@
         align-items: center;
         text-align: center;
         min-height: 140px;
-        gap: 0.75rem;
+        /*gap: 0.75rem;*/
+        gap: $spacing-100;
         transition: all 0.2s ease;
 
         &::before {
@@ -42,8 +43,9 @@
         .desc {
             font-size: 0.875rem;
             color: $text-secondary;
+            font-weight: 400;
             line-height: 1.4;
-            max-width: 10ch;
+            max-width: 45ch;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
