--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -284,3 +284,18 @@ main.wizard--bg-dark .subtitle {
     font-size: $size-font-subtitle;
   }
 }
+
+main.wizard--bg-light .subtitle {
+  font-style: normal;
+  font-weight: lighter;
+  line-height: 130%;
+  margin: 0;
+  @include responsive-padding-bottom($spacing-400, $spacing-450, $spacing-500);
+
+  p {
+    margin: 0;
+    color: $text-primary;
+    font-size: $size-font-subtitle;
+  }
+}
+
