--- a/styles/settings/_spacings.scss
+++ b/styles/settings/_spacings.scss
@@ -7,6 +7,7 @@ $spacing-400: 16px;
 $spacing-450: 20px;
 $spacing-500: 24px;
 $spacing-600: 32px;
+$spacing-650: 40px;
 $spacing-700: 48px;
 $spacing-800: 64px;
 $spacing-900: 80px;
