--- a/blocks/form/components/languagepanel/languagepanel.scss
+++ b/blocks/form/components/languagepanel/languagepanel.scss
@@ -9,6 +9,11 @@ main .form form .panel-repeatable-panel__languagepanel {
 .field-panel-english-skills {
   // To combat specificity from other style
   [class*='field-wrapper'] {
+    > p {
+      margin: 0;
+      padding: 0;
+    }
+
     h3 {
       padding-bottom: 0;
       margin-bottom: $spacing-400;
@@ -29,6 +34,73 @@ main .form form .panel-repeatable-panel__languagepanel {
 
     .checkbox-wrapper:not(:last-child) {
       margin-bottom: $spacing-200;
+    }
+  }
+}
+
+.field-panel-other-languages {
+  padding-top: $spacing-600;
+
+  [class*='field-wrapper'] {
+    > p {
+      margin: 0;
+      padding: 0;
+
+      h3 {
+        padding-bottom: 0;
+        margin-bottom: $spacing-400;
+      }
+
+      p {
+        color: $text-dark-primary;
+        margin-bottom: $spacing-600;
+        font-size: 17px;
+
+        @include media('desktop') {
+          font-size: 20px;
+          margin-bottom: $spacing-650;
+        }
+      }
+
+      h6 {
+        font-size: 24px;
+        padding-bottom: 0;
+        margin-bottom: $spacing-600;
+
+        @include media('desktop') {
+          font-size: 32px;
+        }
+      }
+    }
+  }
+
+  .field-languagepanel {
+    .radio-group-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: $spacing-400 0;
+      padding-bottom: 0;
+      margin-bottom: $spacing-700;
+
+      @include media('desktop') {
+        flex-direction: row;
+        gap: 0 $spacing-400;
+        margin-bottom: $spacing-800;
+      }
+    }
+  }
+
+  .field-languagepanel-options-content {
+    .panel-repeatable-panel {
+      .field-wrapper {
+        margin-bottom: 0;
+      }
+
+      [data-repeatable] {
+        .button-bar {
+          margin-top: $spacing-700;
+        }
+      }
     }
   }
 }
