--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -37,7 +37,7 @@
             font-weight: 600;
             font-size: 1rem;
             color: $text-primary;
-            margin-bottom: 0.25rem;
+            /*margin-bottom: 0.25rem;*/ 
         }
 
         .desc {
