--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -154,3 +154,29 @@
         }
     }
 }
+
+
+.checkbox-wrapper {
+    .field-label--with-description {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        .text {
+            font-weight: 600; // optional
+        }
+
+        .desc {
+            font-size: clamp(0.9375rem, 1.25vw, 1.0625rem);
+            color: #706868;
+            font-weight: 400;
+            line-height: 1.4;
+            max-width: 45ch;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+    }
+}
