--- a/blocks/form/components/languagepanel/languagepanel.scss
+++ b/blocks/form/components/languagepanel/languagepanel.scss
@@ -7,6 +7,7 @@ main .form form .panel-repeatable-panel__languagepanel {
 }
 
 .field-panel-english-skills {
+  padding-top: $spacing-600;
   // To combat specificity from other style
   [class*='field-wrapper'] {
     > p {
