fix(style): form second screen layout

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -11,6 +11,7 @@
 
     @include media('desktop') {
       flex-direction: row;
+      justify-content: center;
       gap: $spacing-400 0;
     }
 
