--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -279,7 +279,7 @@ main.wizard--bg-dark .subtitle {
 
   p {
     margin: 0;
-    color: $text-primary;
+    color: $text-white;
     font-size: $size-font-subtitle;
   }
 }
