feat(form) variant bar styling

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -118,7 +118,7 @@
         }
     }
 
-    &.radio-group--bar {
+    &.variant-bar {
         .radios-wrapper {
             display: flex;
             flex-direction: row;
