--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -140,3 +140,14 @@
     padding-bottom: $desktop;
   }
 }
+
+// Checkbox Variant Pills
+@mixin border-radius-pill-left {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+@mixin border-radius-pill-right {
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+}
