--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -148,57 +148,58 @@
   Horizontal Checkbox Variants
 ******************************/
 
-
-
 .radio-group-wrapper.variant-bar {
     .radios-wrapper {
         display: flex;
-        flex-wrap: nowrap;
-        border: 1px solid $stroke-tertiary;
-        @include border-radius-pill;
+        border: 2px solid $stroke-tertiary;
+        border-radius: 999px;
         overflow: hidden;
-        background-color: $color-white;
-    }
 
-    .radio-wrapper {
-        flex: 1;
+        .radio-wrapper {
+            flex: 1;
 
-        input[type='radio'] {
-            @extend %visually-hidden;
+            input[type='radio'] {
+                // Visually hide the radio input
+                position: absolute;
+                opacity: 0;
+                pointer-events: none;
+            }
 
-            &:checked + label {
-                background-color: $color-primary;
+            label {
+                display: block;
+                padding: $spacing-400;
+                text-align: center;
+                background-color: $color-white;
+                border-right: 1px solid $stroke-tertiary;
+                font-weight: 600;
+                color: $text-primary;
+                cursor: pointer;
+                transition: background-color 0.2s ease, color 0.2s ease;
+
+                &:hover {
+                    background-color: $bg-dark;
+                    color: $color-white;
+                }
+            }
+
+            &:last-child label {
+                border-right: none;
+            }
+
+            &:first-child label {
+                border-top-left-radius: 999px;
+                border-bottom-left-radius: 999px;
+            }
+
+            &:last-child label {
+                border-top-right-radius: 999px;
+                border-bottom-right-radius: 999px;
+            }
+
+            input[type='radio']:checked + label {
+                background-color: $bg-dark;
                 color: $color-white;
             }
         }
-
-        label {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: $spacing-400;
-            font-weight: 500;
-            font-size: 1rem;
-            border-right: 1px solid $stroke-tertiary;
-            background-color: $color-white;
-            color: $text-primary;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            width: 100%;
-            height: 100%;
-        }
-
-        &:last-child label {
-            border-right: none;
-        }
     }
 }
-%visually-hidden {
-    position: absolute !important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
-    white-space: nowrap;
-}
-
